--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "bpp-web",
   "version": "0.1.0",
+  "homepage": "https://alexandko.github.io/bpp-web/",
+  "proxy": "https://212.142.94.197:65500/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -20,7 +22,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -deploy",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
